scss/partials/_alert_modal.scss
div.alert-modal-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0px;
  left: 0px;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 106};
  transition: opacity 180ms ease-in;
  overflow: auto;

  &.will-appear {
    opacity: 0;
  }

  &.appear {
    opacity: 1;
  }

  div.modal-wrapper {
    width: #{337 + 20 + 8}px;
    margin: 100px auto 50px;
    min-height: 147px;
    position: relative;

    @include mobile() {
      width: 100%;
      height: 100vh;
      margin: 0px;

      button.carrot-modal-close {
        display: none;
      }
    }

    div.alert-modal {
      width: 337px;
      margin: 0px 0px 0px 28px;
      position: relative;
      overflow: hidden;
      background-color: white;
      border-radius: 8px;
      box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
      padding: 24px;
      text-align: center;

      @include mobile() {
        margin: 0px;
        position: absolute;
        top: unset;
        bottom: 0px;
        width: 100%;
        border-bottom-right-radius: 0px;
        border-bottom-left-radius: 0px;
        border-top-right-radius: 8px;
        border-top-left-radius: 8px;
      }

      &.has-buttons {
        min-height: 197px;

        @include mobile() {
          min-height: initial;
        }
      }

      img.alert-modal-icon {
        max-width: 42px;
        max-height: 42px;
        margin-bottom: 12px;
      }

      div.alert-modal-title {
        @include avenir_H();
        font-size: 16px;
        color: $carrot_dark_gray_1;
        margin-top: 8px;
      }

      div.alert-modal-message {
        @include avenir_R();
        font-size: 16px;
        color: $oc_gray_7;
        margin-top: 8px;
      }

      div.alert-modal-buttons {
        width: calc(100% - 24px);
        margin: 24px 12px 0;

        &.single-button {
          button {
            float: none;
            margin: 0 auto;
          }
        }

        button {
          width: calc(50% - 14px);
          float: left;
          height: 40px;

          &:not(:first-child) {
            margin-left: 14px;
          }
        }
      }
    }
  }
}

